--- a/apps/web/src/app.html
+++ b/apps/web/src/app.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="JejakCuan - Indonesian Stock Tracker & Analysis Platform" />
     %sveltekit.head%
   </head>
-  <body data-sveltekit-preload-data="hover" data-theme="skeleton">
+  <body data-sveltekit-preload-data="hover" data-theme="jejakcuan" class="bg-surface-900">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
